Fixed #416: use both 'gap' versions to ensure compatibility in older browsers

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -173,6 +173,7 @@ nav ul, .wordcloud, .wordlist, .gridcontainer, .griditem ul, #indexes, #explore,
   margin 0
   padding 0
   gap 1rem
+  grid-gap 1rem
   grid-template-columns repeat(auto-fit, 10rem)
   justify-content center
   li:nth-child(10n+0)
@@ -583,6 +584,7 @@ a > span // Make citations appear correctly
 .articles
   display grid
   grid-template-columns repeat(auto-fit,10rem)
+  gap 1rem
   grid-gap 1rem
   margin-top 0
   justify-content center
@@ -618,6 +620,7 @@ a > span // Make citations appear correctly
 #explore
   display grid
   grid-template-columns repeat(auto-fit,7rem)
+  gap 1rem
   grid-gap 1rem
   margin-top 0
   justify-content center
@@ -861,6 +864,7 @@ ol#organisations > li
 
 #main-nav, #page-nav, #network-nav
   display grid
+  grid-gap 1rem
   gap 1rem
   padding 1rem
   justify-content stretch
@@ -886,6 +890,7 @@ ol#organisations > li
       align-items flex-start
       margin .5rem
       line-height 1.25
+      grid-gap initial
       gap initial
     h2
       margin 0
